fix issue with answer buttons overlapping the quiz container on screen sizes 850px and smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -373,7 +373,7 @@ textarea {
   .quiz-container {
     top: 160px;
     margin: 20px auto 0 auto;
-    width: 450px;
+    width: 500px;
   }
 }
 
